--- a/CashSplash/CashSplash/UI/Storyboard-iPhone.storyboard
+++ b/CashSplash/CashSplash/UI/Storyboard-iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="5Jd-wF-Qom">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="5Jd-wF-Qom">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -532,7 +532,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
             </objects>
             <point key="canvasLocation" x="1652" y="1000"/>
         </scene>
-        <!--Data Details Table View Controller - Spending Details-->
+        <!--Data Details Table View Controller - Payment Details-->
         <scene sceneID="Tmg-ea-mkC">
             <objects>
                 <tableViewController id="MBX-7r-wOu" customClass="CSDataDetailsTableViewController" sceneMemberID="viewController">
@@ -665,7 +665,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                             <outlet property="delegate" destination="MBX-7r-wOu" id="HeB-rk-pnb"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Spending Details" id="VDm-6t-WFr"/>
+                    <navigationItem key="navigationItem" title="Payment Details" id="VDm-6t-WFr"/>
                     <connections>
                         <outlet property="amountLabel" destination="xgN-op-5nr" id="SjP-xB-wiN"/>
                         <outlet property="categoryLabel" destination="g8s-e1-KEi" id="i3j-GM-9dA"/>
